--- a/static/templates/base/pages/auth/login.html
+++ b/static/templates/base/pages/auth/login.html
@@ -20,11 +20,11 @@
               <form class="forms-sample">
                 <div class="mb-3">
                   <label for="userEmail" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="userEmail" placeholder="Email">
+                  <input type="email" name="user_email" class="form-control" id="userEmail" placeholder="Email">
                 </div>
                 <div class="mb-3">
                   <label for="userPassword" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="userPassword" autocomplete="current-password" placeholder="Password">
+                  <input type="password" class="form-control" name="user_password" id="userPassword" autocomplete="current-password" placeholder="Password">
                 </div>
                 <div class="form-check mb-3">
                   <input type="checkbox" class="form-check-input" id="authCheck">
