--- a/static/templates/base/pages/auth/base/auth_base.html
+++ b/static/templates/base/pages/auth/base/auth_base.html
@@ -14,6 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com/">
   <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&amp;display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/static/assets/vendors/sweetalert2/sweetalert2.min.css">
   <!-- End fonts -->
 
 	<!-- core:css -->
@@ -64,6 +65,8 @@
 	<!-- inject:js -->
 	<script src="/static/assets/vendors/feather-icons/feather.min.js"></script>
 	<script src="/static/assets/js/template.js"></script>
+	<script src="/static/assets/vendors/sweetalert2/sweetalert2.min.js"></script>
+	
 	<script>
 		console.log("good");
 	</script>
