--- a/static/templates/base/pages/auth/login.html
+++ b/static/templates/base/pages/auth/login.html
@@ -18,26 +18,28 @@
               <a href="#" class="noble-ui-logo d-block mb-2">IT<span> - TAAS</span></a>
               <h5 class="text-muted fw-normal mb-4">Welcome! Log in to your account.</h5>
               <form class="forms-sample">
+                
                 <div class="mb-3">
                   <label for="userEmail" class="form-label">Email address</label>
-                  <input type="email" name="user_email" class="form-control" id="userEmail" placeholder="Email">
+                  <input type="email" name="user_email" class="form-control" id="userEmail" placeholder="Email" autocomplete="username" required>
                 </div>
+
                 <div class="mb-3">
                   <label for="userPassword" class="form-label">Password</label>
-                  <input type="password" class="form-control" name="user_password" id="userPassword" autocomplete="current-password" placeholder="Password">
+                  <input type="password" class="form-control" name="user_password" id="userPassword" autocomplete="current-password" placeholder="Password" required>
                 </div>
-                <div class="form-check mb-3">
+
+                <!-- <div class="form-check mb-3">
                   <input type="checkbox" class="form-check-input" id="authCheck">
                   <label class="form-check-label" for="authCheck">
                     Remember me
                   </label>
-                </div>
+                </div> -->
                 <div>
-                  <a href="../../dashboard.html" class="btn btn-primary me-2 mb-2 mb-md-0 text-white">Login</a>
-                  <button type="button" class="btn btn-outline-primary btn-icon-text mb-2 mb-md-0">
-                    
+                  <a href="javascript:;" class="btn btn-primary me-2 mb-2 mb-md-0 text-white" id="web_login">Login</a>
+                  <!-- <button type="button" class="btn btn-outline-primary btn-icon-text mb-2 mb-md-0">
                     Login with Google
-                  </button>
+                  </button> -->
                 </div>
                 <a href="register.html" class="d-block mt-3 text-muted">Not a user? Sign up</a>
               </form>
